# mlops-piano-video

./: .gitignore  .gitmodules  Makefile  README.md  cloud_function.py  cloudbuild.yaml  models.dvc  pyproject.toml  requirements.txt  requirements_app.txt  structure.md
.dvc/: config
.github/workflows/: deploy.yml  tests.yml
app/: main.py
data/: processed.dvc  raw.dvc
dockerfiles/: app.dockerfile  app.sh  dev.dockerfile  entrypoint.sh  predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
function_deployment/: main.py  requirements.txt
piano_video/: __init__.py  config.yaml  predict_model.py  train_model.py
piano_video/config/: config.yaml
piano_video/data/: data.py
piano_video/imagen_pytorch/: data.py  imagen_pytorch.py
piano_video/models/: model.py
reports/: README.md
tests/: __init__.py  test_train_model.py
wandb/: latest-run
wandb/run-20240110_085556-5lstfp0r/: run-5lstfp0r.wandb
wandb/run-20240110_085602-0mmuactq/: run-0mmuactq.wandb
wandb/run-20240110_085602-10hp5fv4/: run-10hp5fv4.wandb
wandb/run-20240110_085603-26h6g4cy/: run-26h6g4cy.wandb
wandb/run-20240110_085603-4a4dne9i/: run-4a4dne9i.wandb
wandb/run-20240110_085603-4ea15f61/: run-4ea15f61.wandb
wandb/run-20240110_085603-7f6kq6l6/: run-7f6kq6l6.wandb
wandb/run-20240110_085603-h54kqkys/: run-h54kqkys.wandb
wandb/run-20240110_085603-j4vhm3vd/: run-j4vhm3vd.wandb
wandb/run-20240110_085603-pmi7x50x/: run-pmi7x50x.wandb
wandb/run-20240110_085603-u92vbop6/: run-u92vbop6.wandb
(+215 files in other folders)
